<resources>
    <string name="app_name">Taskly</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="priority">Priority</string>
    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High\n</string>
    <string name="date_picker_text">Select deadline</string>
    <string name="save_task">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit</string>
    <string name="splash">Taskly</string>
    <string name="Settings">Settings</string>
    <string name="dark">Dark mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="About_Us">About Us</string>
    <string name="Feedback">Feedback</string>
    <string name="night_mode_key">night_mode</string>
</resources>