<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:background="@color/white">

    <!-- Settings Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- sound -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/nightSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackTint="@drawable/colour_selector"
            app:thumbTint="@color/white"
            android:checked="true" />
    </LinearLayout>

    <!-- About Us -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About_Us"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp" />


    <!-- Feedback -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_vertical"
        android:text="@string/Feedback"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

</LinearLayout>